:bug: fix: fix content to center
however it was centered by using padding and margin.
Couldn't align it "properly

--- a/styles.css
+++ b/styles.css
@@ -1,221 +1,228 @@
 /* styles.css */
 
 /* Reset some default styles */
-body,
-h1,
-h2,
-p {
-  margin: 0;
-  padding: 0;
+body, h1, h2, p {
+    margin: 0;
+    padding: 0;
 }
 
 /* Basic styling */
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  margin: 0;
-  padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
 }
 
 header {
-  display: flex;
-  align-items: center; /* Align items vertically */
-  justify-content: space-between; /* Align items horizontally */
-  background-color: #98cfe9;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
+    display: flex;
+    align-items: center; /* Align items vertically */
+    justify-content: space-between; /* Align items horizontally */
+    background-color: #98cfe9;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
 }
 
 header h1 {
-  font-size: 36px;
+    font-size: 36px;
 }
 
 .button {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #98cfe9;
-  color: white;
-  text-decoration: none;
-  border: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #98cfe9; 
+    color: white;
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
 
 .button:hover {
-  color: #5f8292;
+    color: #5f8292; 
 }
 
 .button-reverse {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: white;
-  color: #98cfe9;
-  text-decoration: none;
-  border: none;
-  border-radius: 5px;
-  line-height: 2;
-  font-size: larger;
-  font-weight: bold;
-  transition: background-color 0.3s ease;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: white; 
+    color: #98cfe9;
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    line-height: 2;
+    font-size:larger;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
 }
 
 .button-reverse:hover {
-  background-color: #5f8292;
-  color: white;
+    background-color: #5f8292;
+    color: white;
 }
 
 .container {
-  display: flex;
+    display: flex;
 }
 
 main {
-  display: flex;
-  flex: 1;
-  padding: 20px;
+    display: flex;
+    flex: 1;
+    padding: 20px;
 }
 
 /* profile left part */
-.profile,
-.bio {
-  margin-bottom: 20px;
-  text-align: center;
+.profile, .bio {
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 .profile {
-  flex: 1; /* Adjust profile to the left */
-  text-align: center;
-  width: 30%;
+    flex: 1; /* Adjust profile to the left */
+    text-align: center;
+    width: 30%;
 }
 
 .profile-img-box {
-  width: 100%;
-  height: 200px;
-  padding-bottom: 10px;
+    width: 100%;
+    height: 200px;
+    padding-bottom: 10px;
 }
 .profile img {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  margin-bottom: 10px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    
 }
 
 .bio-name {
-  font-size: 24px;
+    font-size: 24px;
 }
 
 .bio-major {
-  font-style: italic;
-  color: #777;
+    font-style: italic;
+    color: #777;
 }
 
 /* Flip Image */
 .flip-box {
-  background-color: transparent;
-  width: 200px;
-  height: 200px;
-  perspective: 1000px;
-  display: block;
+    background-color: transparent;
+    width: 200px;
+    height: 200px;
+    perspective: 1000px;
+    display: block;
   margin-left: auto;
   margin-right: auto;
-}
+  }
+  
+  .flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  .flip-box:hover .flip-box-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-box-front, .flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border-radius: 50%;
+    margin: 0 auto;
+    
+  }
+  
+  .flip-box-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  .flip-box-back {
+    height: 100%;
+    background-color: #98cfe9;
+    color: white;
+    transform: rotateY(180deg);
+    
+  }
 
-.flip-box-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-.flip-box:hover .flip-box-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-box-front,
-.flip-box-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  border-radius: 50%;
-}
-
-.flip-box-front {
-  background-color: #bbb;
-  color: black;
-}
-
-.flip-box-back {
-  background-color: #98cfe9;
-  color: white;
-  transform: rotateY(180deg);
-}
-
+  .contacts {
+    height: 100%;
+    text-align: left;
+    padding: 20px;
+    margin: 20px;
+  }
+  
 /* about content right part */
 .bio {
-  flex: 2; /* Adjusted to make space for bio */
+    flex: 2; /* Adjusted to make space for bio */
 }
 
 .bio h2 {
-  font-size: 24px;
-  margin-top: 20px;
+    font-size: 24px;
+    margin-top: 20px;
 }
 
 .bio p {
-  line-height: 1.5;
+    line-height: 1.5;
 }
 
 .about-content {
-  padding: 30px;
+    padding: 30px;
 }
 
 .content#bio,
 .content#web {
-  padding: 10px;
+    padding: 10px;
 }
 footer {
-  background-color: #98cfe9;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
+    background-color: #98cfe9;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
 }
 
 /* projects */
 
 .projects {
-  width: 70%;
-  height: 100%;
+    width: 70%;
+    height: 100%;
 }
 
 .project-container {
-  /* width: 30%; */
-  width: 80%;
-  padding: 10px;
+   /* width: 30%; */
+   width: 80%;
+    padding: 10px;
 }
 
 .project-container h2 {
-  margin-bottom: 5px;
+    margin-bottom: 5px;
 }
 
 .project-date {
-  font-style: italic;
-  color: #777;
-  margin-bottom: 10px;
+    font-style: italic;
+    color: #777;
+    margin-bottom: 10px;
 }
 
 .project-link {
-  display: inline-block;
-  padding: 10px 20px; /* Adjust padding as needed */
-  margin-top: 10px; /* Adjust margin-top as needed */
-  background-color: #98cfe9;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+    display: inline-block;
+    padding: 10px 20px; /* Adjust padding as needed */
+    margin-top: 10px; /* Adjust margin-top as needed */
+    background-color: #98cfe9; 
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
 
 .project-link:hover {
-  background-color: #5f8292;
+    background-color: #5f8292; 
 }
